# adaptive_scheduler

./: .coveragerc  .dockerignore  .gitignore  .python-version  .travis.yml  Dockerfile  INSTALL  Makefile.local  README  README.md  as.py  as2.py  bug.py  docker-compose.sh  docker-compose.yml  docker-entrypoint.sh  docker-test-entrypoint.sh  docker-test-no-gurobi-entrypoint.sh  docker-test-no-third-party-entrypoint.sh  for_teri.py  for_teri2.py  logger_config.py  logging.conf  my_submit.py  ortools-glpk-reqs.txt  pyproject.toml  requests.json  requirements.pip  set_paths.sh  simulate_requests.py  start_controller  start_controller.py  submit_messier_objects.py  tree_walker.py
adaptive_scheduler/: availability.py  camera_mapping.py  cli.py  comparator.py  configdb_connections.py  controller.py  debug.py  downtime_connections.py  event_utils.py  eventbus.py  exceptions.py  feedback.py  input.py  instruments.py  interfaces.py  kernel.py  kernel_mappings.py  log.py  make_plan_file.py  maxheap.py  memoize.py  metrics.py  model.py  model2.py  models.py  monitor.py  moving_object_utils.py  observation_portal_connections.py  observations.py  orchestrator.py  pond.py  printing.py  request_filters.py  request_parser.py  requestdb.py  schedule.py  scheduler.py  scheduler_input.py  semester_service.py  serialise.py  (+3 more)
bug_reproduction/: bug.py  for_teri2.py  test_long_block_bug.py
cron/: eng_crontab
deploy/: docker-compose.yml  notes_on_requestdb_setup.txt  pond_on_ubuntu.sh  requestdb_on_ubuntu.sh  scheduler_on_ubuntu.sh
docs/: 1_modelling_best_practices.txt  2_advanced_modelling_concepts.txt  3_gurobi_lp_algorithms.txt  4_model_troubleshooting_and_perf.txt  5_gurobi_improvements.txt  6_gurobi_kernel_optimizations.txt
install/: fabfile.py
json_interfaces/: collapsed_human_readable_request.json  network_state_json.py  schedule.json
kernel/: compoundscheduler.py  reservation.py  timepoint.py
overhead_analysis/: errors.out  extract_overheads.py  get_observingreports.py  observationreport.xml  out
scripts/: archive_logs.py  archive_logs.sh  calc_duration.py  clear_reqdb_and_pond.py  extract_overheads.py  get_observingreports.py  messier_catalog.dict  plot_timings.py  print_messier.py  read_dump.py  refactored_observation_window_overlap.py  run.sh  run_weather_monitor.py  set_dirty_local.py  set_path.py  simulate_requests.py  submit_objects.py  submit_pond_block.py  submit_user_request.py  test_23032013.py  try_14226.py  try_bug.py  try_canopus_from_maui.py  try_req_db.py  unschedule_requests.py
test/: active_instruments.json  availability_test.py  domain_test.py  harvest.sqlite  helpers.py  kernel_test.py  maxheap_test.py  schedule_test.py  telescopes.json  telescopes_sqa_offline.json  test_23032013.py  test_archive_logs.py  test_bipartitequantization.py  test_bipartitescheduler.py  test_camera_mapping.py  test_clustering.py  test_contracts.py  test_eventbus.py  test_feedback.py  test_filters.py  test_fullscheduler_cbc.py  test_fullscheduler_gurobi.py  test_fullscheduler_v1.py  test_fullscheduler_v2.py  test_fullscheduler_v3.py  test_fullscheduler_v4.py  test_fullscheduler_v5.py  test_fullscheduler_v6.py  test_hopcrofkarpscheduler.py  test_hungarianscheduler.py  test_input.py  test_integration.py  test_interfaces.py  test_intervals.py  test_kernel_mappings.py  test_kernel_scheduler.py  test_logging.py  (+29 more)
(+146 files in other folders)
