[tool.poetry]
name = "adaptive_scheduler"
version = "1.6.3"
description = ""
authors = ["LCO <ocs@lco.global>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ortools = "^9.10"
time-intervals = "^1"
numpy = "1.23.5"
requests = "^2"
redis = "^3"
retry = "^0.9"
opentsdb-http-client = "^0.2"
opentsdb-python-metrics = "^0.2"
lcogt-logging = "^0.3.2"
python-dateutil = "^2"
unidecode = "<1.2.0"
opensearch-py = "^1"
boto3 = "^1"
ocs-rise-set = "^0.6.4"

[tool.poetry.group.gurobi]
optional = true

[tool.poetry.group.gurobi.dependencies]
gurobipy = "11.0.1"

[tool.poetry.dev-dependencies]
mock = "<=3.1.0"
responses = "<=0.17.0"
pytest = "7.0.1"
fakeredis = "1.8.2"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0", "numpy ~= 1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
adaptive-scheduler = 'adaptive_scheduler.cli:main'
